--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design One</title>
-    <link rel="stylesheet" href="Css/normalize.css" />
-    <link rel="stylesheet" href="Css/Design One.css" />
+    <link rel="stylesheet" href="../Css/normalize.css" />
+    <link rel="stylesheet" href="../Css/Design One.css" />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="Css/all.min.css" />
+    <link rel="stylesheet" href="../Css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +28,7 @@
             <!-- Start Megamenu -->
             <div class="mega-menu">
               <div class="image">
-                <img src="Images/megamenu.png" alt="" />
+                <img src="../Images/megamenu.png" alt="" />
               </div>
               <ul class="links">
                 <li>
@@ -79,7 +79,7 @@
           <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
         </div>
         <div class="image">
-          <img src="Images/landing-image.png" alt="" />
+          <img src="../Images/landing-image.png" alt="" />
         </div>
       </div>
       <a href="#articles" class="go-down">
@@ -92,7 +92,7 @@
       <h2 class="main-title">Articles</h2>
       <div class="container">
         <div class="box">
-          <img src="Images/cat-01.jpg" alt="" />
+          <img src="../Images/cat-01.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-02.jpg" alt="" />
+          <img src="../Images/cat-02.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-03.jpg" alt="" />
+          <img src="../Images/cat-03.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-04.jpg" alt="" />
+          <img src="../Images/cat-04.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-05.jpg" alt="" />
+          <img src="../Images/cat-05.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -147,7 +147,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-06.jpg" alt="" />
+          <img src="../Images/cat-06.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-07.jpg" alt="" />
+          <img src="../Images/cat-07.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="Images/cat-08.jpg" alt="" />
+          <img src="../Images/cat-08.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -184,39 +184,66 @@
     <div class="spikes"></div>
     <!-- End Articles -->
     <!-- Start Gallery -->
-    <div class="gallery">
+    <div class="gallery" id="gallery">
         <h2 class="main-title">Gallery</h2>
         <div class="container">
             <div class="box">
               <div class="image">
-                <img src="Images/gallery-01.png" alt="">
+                <img src="../Images/gallery-01.png" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="Images/gallery-02.png" alt="">
+                <img src="../Images/gallery-02.png" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="Images/gallery-03.jpg" alt="">
+                <img src="../Images/gallery-03.jpg" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="Images/gallery-04.png" alt="">
+                <img src="../Images/gallery-04.png" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="Images/gallery-05.jpg" alt="">
+                <img src="../Images/gallery-05.jpg" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="Images/gallery-06.png" alt="">
+                <img src="../Images/gallery-06.png" alt="">
               </div>
             </div>
           </div>
     </div>
     <!-- End Gallery -->
+     <!-- Start Features -->
+     <div class="features" id="features">
+      <h2 class="main-title">Features</h2>
+      <div class="container">
+        <div class="box quality">
+          <div class="img-holder"><img src="../Images/features-01.jpg" alt="" /></div>
+          <h2>Quality</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+          <a href="#">More</a>
+        </div>
+        <div class="box time">
+          <div class="img-holder"><img src="../Images/features-02.jpg" alt="" /></div>
+          <h2>Time</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+          <a href="#">More</a>
+        </div>
+        <div class="box passion">
+          <div class="img-holder"><img src="../Images/features-03.jpg" alt="" /></div>
+          <h2>Passion</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+          <a href="#">More</a>
+        </div>
+      </div>
+    </div>
+    <!-- End Features -->
+  </body>
+</html>
