--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design One</title>
-    <link rel="stylesheet" href="../Css/normalize.css" />
-    <link rel="stylesheet" href="../Css/Design One.css" />
+    <link rel="stylesheet" href="Css/normalize.css" />
+    <link rel="stylesheet" href="Css/Design One.css" />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../Css/all.min.css" />
+    <link rel="stylesheet" href="Css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +28,7 @@
             <!-- Start Megamenu -->
             <div class="mega-menu">
               <div class="image">
-                <img src="../Images/megamenu.png" alt="" />
+                <img src="Images/megamenu.png" alt="" />
               </div>
               <ul class="links">
                 <li>
@@ -79,7 +79,7 @@
           <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
         </div>
         <div class="image">
-          <img src="../Images/landing-image.png" alt="" />
+          <img src="Images/landing-image.png" alt="" />
         </div>
       </div>
       <a href="#articles" class="go-down">
@@ -92,7 +92,7 @@
       <h2 class="main-title">Articles</h2>
       <div class="container">
         <div class="box">
-          <img src="../Images/cat-01.jpg" alt="" />
+          <img src="Images/cat-01.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-02.jpg" alt="" />
+          <img src="Images/cat-02.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-03.jpg" alt="" />
+          <img src="Images/cat-03.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-04.jpg" alt="" />
+          <img src="Images/cat-04.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-05.jpg" alt="" />
+          <img src="Images/cat-05.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -147,7 +147,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-06.jpg" alt="" />
+          <img src="Images/cat-06.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-07.jpg" alt="" />
+          <img src="Images/cat-07.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../Images/cat-08.jpg" alt="" />
+          <img src="Images/cat-08.jpg" alt="" />
           <div class="content">
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
@@ -189,32 +189,32 @@
         <div class="container">
             <div class="box">
               <div class="image">
-                <img src="../Images/gallery-01.png" alt="">
+                <img src="Images/gallery-01.png" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="../Images/gallery-02.png" alt="">
+                <img src="Images/gallery-02.png" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="../Images/gallery-03.jpg" alt="">
+                <img src="Images/gallery-03.jpg" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="../Images/gallery-04.png" alt="">
+                <img src="Images/gallery-04.png" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="../Images/gallery-05.jpg" alt="">
+                <img src="Images/gallery-05.jpg" alt="">
               </div>
             </div>
             <div class="box">
               <div class="image">
-                <img src="../Images/gallery-06.png" alt="">
+                <img src="Images/gallery-06.png" alt="">
               </div>
             </div>
           </div>
@@ -225,19 +225,19 @@
       <h2 class="main-title">Features</h2>
       <div class="container">
         <div class="box quality">
-          <div class="img-holder"><img src="../Images/features-01.jpg" alt="" /></div>
+          <div class="img-holder"><img src="Images/features-01.jpg" alt="" /></div>
           <h2>Quality</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
           <a href="#">More</a>
         </div>
         <div class="box time">
-          <div class="img-holder"><img src="../Images/features-02.jpg" alt="" /></div>
+          <div class="img-holder"><img src="Images/features-02.jpg" alt="" /></div>
           <h2>Time</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
           <a href="#">More</a>
         </div>
         <div class="box passion">
-          <div class="img-holder"><img src="../Images/features-03.jpg" alt="" /></div>
+          <div class="img-holder"><img src="Images/features-03.jpg" alt="" /></div>
           <h2>Passion</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
           <a href="#">More</a>
@@ -250,7 +250,7 @@
           <h2 class="main-title">Testimonials</h2>
           <div class="container">
             <div class="box">
-              <img src="../Images/avatar-01.png" alt="" />
+              <img src="Images/avatar-01.png" alt="" />
               <h3>Mohamed Farag</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -266,7 +266,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="../Images/avatar-02.png" alt="" />
+              <img src="Images/avatar-02.png" alt="" />
               <h3>Mohamed Ibrahim</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -282,7 +282,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="../Images/avatar-03.png" alt="" />
+              <img src="Images/avatar-03.png" alt="" />
               <h3>Shady Nabil</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -298,7 +298,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="../Images//avatar-04.png" alt="" />
+              <img src="Images//avatar-04.png" alt="" />
               <h3>Amr Hendawy</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -314,7 +314,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="../Images//avatar-05.png" alt="" />
+              <img src="Images//avatar-05.png" alt="" />
               <h3>Sherief Ashraf</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -330,7 +330,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="../Images//avatar-06.png" alt="" />
+              <img src="Images//avatar-06.png" alt="" />
               <h3>Osama Mohamed</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -354,7 +354,7 @@
       <div class="container">
         <div class="box">
           <div class="data">
-            <img src="../Images/team-01.jpg" alt="" />
+            <img src="Images/team-01.jpg" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -377,7 +377,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-02.jpg" alt="" />
+            <img src="Images/team-02.jpg" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -400,7 +400,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-03.jpg" alt="" />
+            <img src="Images/team-03.jpg" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -423,7 +423,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-04.jpg" alt="" />
+            <img src="Images/team-04.jpg" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -446,7 +446,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-05.png" alt="" />
+            <img src="Images/team-05.png" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -469,7 +469,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-06.png" alt="" />
+            <img src="Images/team-06.png" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -492,7 +492,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-07.jpg" alt="" />
+            <img src="Images/team-07.jpg" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -515,7 +515,7 @@
         </div>
         <div class="box">
           <div class="data">
-            <img src="../Images/team-08.jpg" alt="" />
+            <img src="Images/team-08.jpg" alt="" />
             <div class="social">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
