--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="Images//avatar-04.png" alt="" />
+              <img src="Images/avatar-04.png" alt="" />
               <h3>Amr Hendawy</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -314,7 +314,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="Images//avatar-05.png" alt="" />
+              <img src="Images/avatar-05.png" alt="" />
               <h3>Sherief Ashraf</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
@@ -330,7 +330,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="Images//avatar-06.png" alt="" />
+              <img src="Images/avatar-06.png" alt="" />
               <h3>Osama Mohamed</h3>
               <span class="title">Full Stack Developer</span>
               <div class="rate">
